--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3006",
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.4",
-    "next": "13.1.4",
+    "eslint-config-next": "13.4.3",
+    "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
