--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,17 @@
 {
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
   "configurations": [
     {
-      "cwd": "${workspaceRoot}",
-      "name": "Dev",
+      "type": "node",
+      "name": "dev.debug",
       "request": "launch",
-      "runtimeExecutable": "yarn",
-      "runtimeArgs": ["dev"],
-      "type": "node"
+      "skipFiles": ["<node_internals>/**"],
+      "cwd": "${workspaceFolder}",
+      "program": "${workspaceFolder}/node_modules/vite/bin/vite.js",
+      "args": ["--mode", "ssr", "--force"]
     }
   ]
 }
