--- a/package.json
+++ b/package.json
@@ -1,25 +1,38 @@
 {
-  "name": "cindy-irmgard-website",
-  "version": "0.1.0",
+  "name": "my-qwik-empty-starter",
+  "description": "App with Routing built-in ready to create your app",
+  "engines": {
+    "node": ">=15.0.0"
+  },
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "production": "git pull && yarn install --frozen-lockfile --ignore-scripts && yarn build && pm2 reload ecosystem.config.js",
-    "build": "next build",
-    "start": "next start -p 3006",
-    "lint": "next lint"
+    "build": "qwik build",
+    "build.client": "vite build",
+    "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.types": "tsc --incremental --noEmit",
+    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
+    "dev": "vite --mode ssr",
+    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "fmt": "prettier --write .",
+    "fmt.check": "prettier --check .",
+    "lint": "eslint \"src/**/*.ts*\"",
+    "preview": "qwik build preview && vite preview --open",
+    "start": "vite --open --mode ssr",
+    "qwik": "qwik"
   },
-  "dependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.57.1",
-    "sharp": "^0.32.1",
-    "typescript": "4.9.4"
+  "devDependencies": {
+    "@builder.io/qwik": "^1.2.6",
+    "@builder.io/qwik-city": "^1.2.6",
+    "@types/eslint": "8.40.2",
+    "@types/node": "^20.4.0",
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
+    "eslint": "8.44.0",
+    "eslint-plugin-qwik": "^1.2.6",
+    "prettier": "2.8.8",
+    "typescript": "5.1.6",
+    "undici": "5.22.1",
+    "vite": "4.4.0",
+    "vite-tsconfig-paths": "4.2.0"
   }
 }
